--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Build image
         run: |
           fedora --registry=quay.io --org=fedora --variant=fedora --suffix=bootc --tag ${{ env.MAJOR_VERSION }} |
-          with-packages-installed audit, clevis-dracut, clevis-pin-tpm2, firewalld, gcc, pciutils, usbutils, wireguard-tools |
+          with-packages-installed audit clevis-dracut clevis-pin-tpm2 firewalld gcc pciutils usbutils wireguard-tools |
           container |
           file /etc/os-release |
           contents
