--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_NAME: "homeserver"
+  IMAGE_NAME: "homeserver-dagger"
   IMAGE_DESC: "Fedora-based Homeserver-focused image"
   IMAGE_REGISTRY: "ghcr.io/${{ github.repository_owner }}" # do not edit
   ARTIFACTHUB_LOGO_URL: "https://avatars.githubusercontent.com/u/120078124?s=200&v=4" # You should put your own image here so that you get a fancy profile image on https://artifacthub.io/!
@@ -55,9 +55,8 @@ jobs:
           with-packages-installed cockpit cockpit-selinux |
           with-packages-installed tailscale |
           with-packages-installed genisoimage incus incus-agent incus-client swtpm |
-          container |
-          file /etc/os-release |
-          contents
+          container ${{ env.IMAGE_REGISTRY }}/${{ env.IMAGE_NAME }} |
+          publish ghcr.io/starlit-os/
         shell: dagger {0} 
         env:
           DAGGER_CLOUD_TOKEN: ${{ secrets.DAGGER_CLOUD_TOKEN }}
